Avoids cropping of icons in header

--- a/src/onegov/org/theme/styles/header.scss
+++ b/src/onegov/org/theme/styles/header.scss
@@ -139,6 +139,7 @@ $navbar-shadow: 0px 15px 10px -15px rgba(10, 10, 10, 0.25);
 
         @include breakpoint(medium up) {
             font-size: 1.25rem;
+            padding-top: 2px;
         }
     }
 }
